--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     .panel {
       position: absolute; top: 12px; left: 12px; z-index: 1000;
       background: rgba(255,255,255,.95); padding: 12px 14px; border-radius: 12px;
-      box-shadow: 0 6px 18px rgba(0,0,0,.12); font: 14px/1.3 system-ui, Arial, sans-serif; max-width: 320px;
+      box-shadow: 0 6px 18px rgba(0,0,0,.12); font: 14px/1.35 system-ui, Arial, sans-serif; max-width: 360px;
     }
     .panel h1 { margin: 0 0 6px; font-size: 16px; }
     .panel button { cursor: pointer; border: 0; padding: 8px 10px; border-radius: 8px;
@@ -27,20 +27,22 @@
 </head>
 <body>
   <div id="map"></div>
+
   <div class="panel">
     <h1>Windborne Balloon Constellation</h1>
     <div id="status">Loading latest 24h…</div>
     <div class="legend">
       • Circles = current balloon positions (click for weather)<br>
-      • Lines = last 24h tracks (skip gaps/corrupted points)<br>
+      • Faint dots = prior hours (most recent is darkest)<br>
       • Auto-refresh every 5 min
     </div>
     <div style="margin-top:8px">
       <button id="refreshBtn">Refresh now</button>
     </div>
   </div>
+
   <div class="foot">
-    Built for the Flight Team Web Developer challenge. External dataset: Open-Meteo current weather.
+    Built for the Flight Team Web Developer challenge — Combined with Open-Meteo current weather.
   </div>
 
   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
@@ -52,60 +54,53 @@
     const REFRESH_MS = 5 * 60 * 1000;    // 5 minutes
 
     // Map
-    const map = L.map('map').setView([20, 0], 2); // world view
+    const map = L.map('map', { worldCopyJump: true }).setView([20, 0], 2);
     L.tileLayer("https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png", {
       maxZoom: 8,
       attribution: "&copy; OpenStreetMap"
     }).addTo(map);
 
     const layers = {
-      tracks: L.layerGroup().addTo(map),
-      markers: L.layerGroup().addTo(map)
+      current: L.layerGroup().addTo(map),
+      history: L.layerGroup().addTo(map) // contains sublayers per hour
     };
 
     const statusEl = document.getElementById('status');
     document.getElementById('refreshBtn').addEventListener('click', () => bootstrap(true));
 
-    // ------------- Helpers -------------
+    // ---------- Helpers ----------
     const isNum = (n) => typeof n === "number" && isFinite(n);
     function clampLatLon(lat, lon) {
       if (!isNum(lat) || !isNum(lon)) return null;
       if (lat < -90 || lat > 90 || lon < -180 || lon > 180) return null;
       return [lat, lon];
     }
-    function pick(obj, keys) {
-      for (const k of keys) if (obj && obj[k] != null) return obj[k];
-      return undefined;
-    }
 
-    // Guess fields from unknown schema.
+    // Normalizer that supports the array format you saw: [lat, lon, alt]
     function normalizeRecord(rec) {
-      // Try common keys
-      const lat = pick(rec, ["lat","latitude","Lat","Latitude"]);
-      const lon = pick(rec, ["lon","lng","longitude","Lon","Lng","Longitude"]);
-      const alt = pick(rec, ["alt","altitude","Altitude"]);
-      const id  = pick(rec, ["id","name","serial","balloon_id","balloon","call","callsign"]);
-      const t   = pick(rec, ["time","timestamp","t","date","ts"]);
+      if (Array.isArray(rec)) {
+        const [lat, lon, alt] = rec;
+        const ok = clampLatLon(Number(lat), Number(lon));
+        if (!ok) return null;
+        return { id: "balloon", lat: ok[0], lon: ok[1], alt: isNum(Number(alt)) ? Number(alt) : null, time: null };
+      }
+      // Fallback in case some hours use objects
+      const lat = rec?.lat ?? rec?.latitude ?? rec?.Lat ?? rec?.Latitude;
+      const lon = rec?.lon ?? rec?.lng ?? rec?.longitude ?? rec?.Lon ?? rec?.Lng ?? rec?.Longitude;
+      const alt = rec?.alt ?? rec?.altitude ?? rec?.Altitude;
+      const id  = rec?.id ?? rec?.name ?? rec?.serial ?? rec?.balloon_id ?? rec?.balloon ?? rec?.call ?? rec?.callsign ?? "balloon";
+      const t   = rec?.time ?? rec?.timestamp ?? rec?.t ?? rec?.date ?? rec?.ts ?? null;
       const ok = clampLatLon(Number(lat), Number(lon));
       if (!ok) return null;
-      return { id: id ?? "unknown", lat: ok[0], lon: ok[1], alt: isNum(Number(alt)) ? Number(alt) : null, time: t ?? null };
+      return { id, lat: ok[0], lon: ok[1], alt: isNum(Number(alt)) ? Number(alt) : null, time: t };
     }
 
     function normalizePayload(json) {
-      // Accept array or object map {id: {...}} or {records:[...]}
-      let arr = [];
-      if (Array.isArray(json)) arr = json;
-      else if (Array.isArray(json?.records)) arr = json.records;
-      else if (json && typeof json === "object") {
-        // Flatten values if object-of-objects
-        arr = Object.values(json);
-      }
-      const points = [];
-      for (const r of arr) {
-        const n = normalizeRecord(r);
-        if (n) points.push(n);
-      }
-      return points;
+      // Accept array-of-arrays, array-of-objects, object with {records: [...]}, or object map
+      if (Array.isArray(json)) return json.map(normalizeRecord).filter(Boolean);
+      if (Array.isArray(json?.records)) return json.records.map(normalizeRecord).filter(Boolean);
+      if (json && typeof json === "object") return Object.values(json).map(normalizeRecord).filter(Boolean);
+      return [];
     }
 
     async function fetchHour(hour) {
@@ -130,85 +125,63 @@
       }
     }
 
-    function colorForId(id) {
-      // deterministic pastel-ish color per id
-      let h = 0;
-      for (let i=0;i<id.length;i++) h = (h*31 + id.charCodeAt(i)) % 360;
-      return `hsl(${h}, 75%, 45%)`;
+    function colorForHourIndex(h) {
+      // 0 .. 23 where 0 = most recent past hour, darker for recent, lighter for older
+      const light = 30 + Math.round((h / (HOURS-1)) * 55); // 30..85%
+      return `hsl(210, 80%, ${light}%)`;
     }
 
-    function draw(tracksById, latestById) {
-      layers.tracks.clearLayers();
-      layers.markers.clearLayers();
+    function draw(perHour) {
+      layers.current.clearLayers();
+      layers.history.clearLayers();
 
       const bounds = [];
 
-      // tracks
-      for (const [id, pts] of tracksById) {
-        const latlngs = pts.map(p => [p.lat, p.lon]);
-        if (latlngs.length >= 2) {
-          L.polyline(latlngs, { weight: 3, opacity: 0.7, color: colorForId(id) }).addTo(layers.tracks);
-          bounds.push(...latlngs);
-        }
-      }
-
-      // markers + weather
-      const markers = [];
-      for (const [id, p] of latestById) {
-        const m = L.circleMarker([p.lat, p.lon], {
-          radius: 6, weight: 2, color: "#111", fillOpacity: 0.9, fillColor: colorForId(id)
-        }).addTo(layers.markers);
+      // Latest hour (00.json) -> interactive markers with weather
+      const latest = perHour[perHour.length - 1] || [];
+      for (const p of latest) {
+        const marker = L.circleMarker([p.lat, p.lon], {
+          radius: 6, weight: 2, color: "#111", fillOpacity: 0.9, fillColor: "#2a7"
+        }).addTo(layers.current);
 
         (async () => {
           const wx = await fetchWeather(p.lat, p.lon);
           const wxHtml = wx
             ? `<div><b>Weather</b>: ${wx.temperature}&deg;C, wind ${wx.windspeed} m/s @ ${wx.winddirection}&deg;</div>`
             : `<div><i>Weather unavailable</i></div>`;
-          const altHtml = isNum(p.alt) ? `<div>Alt: ${p.alt} m</div>` : "";
-          const tHtml = p.time ? `<div>Time: ${p.time}</div>` : "";
-          m.bindPopup(`<b>Balloon:</b> ${id}${altHtml}${tHtml}${wxHtml}`);
+          const altHtml = isNum(p.alt) ? `<div>Alt: ${p.alt}</div>` : "";
+          marker.bindPopup(`<b>Balloon</b><br>${altHtml}${wxHtml}`);
         })();
 
-        markers.push(m);
         bounds.push([p.lat, p.lon]);
       }
 
-      if (bounds.length) map.fitBounds(bounds, { padding: [30, 30] });
+      // Prior hours -> faint dots, hour shading
+      for (let i = 0; i < perHour.length - 1; i++) {
+        const hourLayer = L.layerGroup().addTo(layers.history);
+        const pts = perHour[i];
+        const color = colorForHourIndex(perHour.length - 2 - i); // 0=most recent past
+        for (const p of pts) {
+          L.circleMarker([p.lat, p.lon], {
+            radius: 3, weight: 1, color, fillOpacity: 0.5, fillColor: color
+          }).addTo(hourLayer);
+        }
+      }
+
+      if (bounds.length) map.fitBounds(bounds, { padding: [30,30] });
     }
 
     async function bootstrap(manual = false) {
       statusEl.textContent = manual ? "Refreshing…" : "Loading latest 24h…";
       try {
-        // Fetch hours 23 → 00 so tracks are time-ordered old→new
+        // fetch 23..00 so we can easily pick "latest"
         const hours = Array.from({length: HOURS}, (_,i)=>HOURS-1-i);
         const results = await Promise.allSettled(hours.map(fetchHour));
         const perHour = results.map(r => r.status === "fulfilled" ? r.value : []);
 
-        // Group by balloon id
-        const tracksById = new Map();
-        const latestById = new Map();
-
-        for (let h = 0; h < perHour.length; h++) {
-          for (const p of perHour[h]) {
-            const id = String(p.id ?? "unknown");
-            if (!tracksById.has(id)) tracksById.set(id, []);
-            tracksById.get(id).push(p);            // grows old→new via loop order
-            if (h === perHour.length - 1) latestById.set(id, p); // from 00.json
-          }
-        }
-
-        // If we failed to populate latest from 00.json, fall back to last non-empty hour
-        if (latestById.size === 0) {
-          for (let h = perHour.length - 1; h >= 0; h--) {
-            for (const p of perHour[h]) {
-              latestById.set(String(p.id ?? "unknown"), p);
-            }
-            if (latestById.size) break;
-          }
-        }
-
-        draw(tracksById, latestById);
-        statusEl.textContent = `Loaded ${latestById.size} balloons · tracks over last 24h`;
+        draw(perHour);
+        const latestCount = perHour[perHour.length - 1]?.length ?? 0;
+        statusEl.textContent = `Loaded ${latestCount} current balloons · history: ${HOURS-1} hours`;
       } catch (e) {
         console.error(e);
         statusEl.innerHTML = `<span class="error">Load failed.</span> See console for details.`;
